// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser component should render with button disabled 1`] = `
<div>
  <input
    name="name"
    onChange={[Function]}
    type="text"
    value=""
  />
  <label
    htmlFor="name"
  >
    Name
  </label>
  <input
    name="email"
    onChange={[Function]}
    type="text"
    value=""
  />
  <label
    htmlFor="email"
  >
    Email
  </label>
  <input
    checked={false}
    name="isDoctor"
    onChange={[Function]}
    type="checkbox"
    value="isDoctor"
  />
  <label
    htmlFor="isDoctor"
  >
    Doctor
  </label>
  <input
    checked={false}
    name="isSpecialist"
    onChange={[Function]}
    type="checkbox"
    value="isSpecialist"
  />
  <label
    htmlFor="isSpecialist"
  >
    Specialist
  </label>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Add User
  </button>
</div>
`;

exports[`AddUser component should render with button enabled 1`] = `
<div>
  <input
    name="name"
    onChange={[Function]}
    type="text"
    value="Marty McFly"
  />
  <label
    htmlFor="name"
  >
    Name
  </label>
  <input
    name="email"
    onChange={[Function]}
    type="text"
    value=""
  />
  <label
    htmlFor="email"
  >
    Email
  </label>
  <input
    checked={false}
    name="isDoctor"
    onChange={[Function]}
    type="checkbox"
    value="isDoctor"
  />
  <label
    htmlFor="isDoctor"
  >
    Doctor
  </label>
  <input
    checked={false}
    name="isSpecialist"
    onChange={[Function]}
    type="checkbox"
    value="isSpecialist"
  />
  <label
    htmlFor="isSpecialist"
  >
    Specialist
  </label>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Add User
  </button>
</div>
`;
